STEALTH-139 Fix sidebar panel alignment.
Added a test page in src/test/ui/core/sidebar/sidebar.test.html

Also, tweaked stWidgetCompiler to handle widget changes.

Reviewed by @mcw8d

--- a/webapp/src/main/ui/src/stylus/sidebar.styl
+++ b/webapp/src/main/ui/src/stylus/sidebar.styl
@@ -37,7 +37,6 @@
         line-height 22px
         .btn
             padding 0
-            border none
             &.active
                 color #006481
                 text-shadow 0 0 8px #00c7ff
